--- a/index.html
+++ b/index.html
@@ -1,54 +1,26 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolats pour Océanopolis - Voyage Brest</title>
-    <style>
-        /* Styles de base pour un affichage propre */
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #EAF2F8; color: #333; }
-        .container { max-width: 650px; margin: 0 auto; padding: 30px; background-color: white; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-        h1 { 
-            color: #0060A8; /* Bleu Océan */
-            margin-bottom: 10px; 
-            font-size: 1.8em; 
-        }
-        h2 {
-            color: #7B3F00; /* Marron Chocolat */
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-        p { 
-            line-height: 1.6; 
-            margin-bottom: 20px; 
-            font-size: 1.1em;
-        }
-        
-        /* Style du bouton de commande */
-        .button {
-            display: inline-block;
-            background-color: #7B3F00; /* Marron Chocolat intense pour attirer l'oeil */
-            color: white;
-            padding: 15px 35px;
-            text-decoration: none;
-            border-radius: 50px; /* Bouton rond */
-            font-size: 1.3em;
-            font-weight: bold;
-            transition: background-color 0.3s, transform 0.2s;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-        }
-        .button:hover { 
-            background-color: #5C2D00; /* Marron plus foncé au survol */
-            transform: translateY(-2px);
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Aidez nos P'tits Loups à Voir les Requins ! 🦈</h1>
-        <h2>Chocolats pour financer le voyage de nos élèves de CE1/CE2 à Brest !</h2>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chocolats Solidaires - École de La Gabillais | Voyage Océanopolis</title>
+    <meta name="description" content="Commandez des chocolats de qualité pour vos fêtes de fin d'année et aidez les élèves de La Gabillais à financer leur voyage à Océanopolis. Offre spéciale entreprises -20%." />
+    <meta name="author" content="École Publique de La Gabillais" />
+    <meta name="keywords" content="chocolats, fin d'année, cadeaux entreprise, Océanopolis, voyage scolaire, école La Gabillais" />
 
-        <p>Salut à tous !</p>
-        <p>Nos enfants de CE1 et CE2 préparent une aventure incroyable : un voyage de 3 jours à <strong>Brest</strong>, avec en point d'orgue la visite de l'<strong>Aquarium Océanopolis</strong> !</p>
-        <p>Pour que ce rêve devienne réalité, nous vendons de délicieux chocolats. 😋</p>
-        <p>Chaque tablette achetée finance directement le voyage de nos explorateurs en herbe. C'est simple et c'est pour la bonne cause !</
+    <meta property="og:title" content="Chocolats Solidaires - École de La Gabillais" />
+    <meta property="og:description" content="Aidez nos élèves à découvrir Océanopolis en commandant des chocolats gourmands pour Noël" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@EcoleLaGabillais" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
+
